Fixed Issues with properly viewing time frames, Added Sortino code

--- a/Notebooks/Asset/Asset study - analysis .ipynb
+++ b/Notebooks/Asset/Asset study - analysis .ipynb
@@ -96,7 +96,7 @@
     "period     = '20y'\n",
     "risk_free_rate = 0.02 / 252  # Annualized risk-free rate divided by trading days\n",
     "#should be a string or None\n",
-    "ticker_str = 'QUAL' #ticker to analyze\n",
+    "ticker_str = 'XLV' #ticker to analyze\n",
     "primary_benchmark_str = 'SPY'# #primary benchmark to compare against\n",
     "secondary_benchmark_str = None # #secondary benchmark to compare against\n",
     "length_of_plots = 20 #number of years of data to plot (after computing the period, this will be adjusted to the closest available data)\n",
@@ -602,6 +602,14 @@
     "sharpe_ticker_mid   = qc.calculate_risk_adjusted_returns(ticker['Close'], ratio_type='sharpe', windows=[time_frame_mid])[f'sharpe_ratio_{time_frame_mid}']\n",
     "sharpe_ticker_long  = qc.calculate_risk_adjusted_returns(ticker['Close'], ratio_type='sharpe', windows=[time_frame_long])[f'sharpe_ratio_{time_frame_long}']\n",
     "\n",
+    "sortino_ticker_short = qc.calculate_risk_adjusted_returns(ticker['Close'], ratio_type='sortino', windows=[time_frame_short])[f'sortino_ratio_{time_frame_short}']\n",
+    "sortino_ticker_mid   = qc.calculate_risk_adjusted_returns(ticker['Close'], ratio_type='sortino', windows=[time_frame_mid])[f'sortino_ratio_{time_frame_mid}']\n",
+    "sortino_ticker_long  = qc.calculate_risk_adjusted_returns(ticker['Close'], ratio_type='sortino', windows=[time_frame_long])[f'sortino_ratio_{time_frame_long}']\n",
+    "\n",
+    "# calculate the spread between sharpe and sortino ratios of the ticker\n",
+    "sharpe_sortino_spread_short = sharpe_ticker_short - sortino_ticker_short\n",
+    "sharpe_sortino_spread_mid = sharpe_ticker_mid - sortino_ticker_mid\n",
+    "sharpe_sortino_spread_long = sharpe_ticker_long - sortino_ticker_long\n",
     "\n",
     "if primary_benchmark is not None:\n",
     "    spread_short_primary = primary_benchmark['Close'].pct_change(time_frame_short) - ticker['Close'].pct_change(time_frame_short)\n",
@@ -657,6 +665,9 @@
     "    sharpe_spread_short_secondary = sharpe_benchmark_short_secondary - sharpe_ticker_short\n",
     "    sharpe_spread_mid_secondary = sharpe_benchmark_mid_secondary - sharpe_ticker_mid\n",
     "    sharpe_spread_long_secondary = sharpe_benchmark_long_secondary - sharpe_ticker_long\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -666,7 +677,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ...existing code...\n",
+    "# Sharpe and Sortino Ratios with Spread Analysis\n",
+    "import plotly.graph_objects as go\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def plot_sharpe_sortino_and_spread(sharpe, sortino, time_frame, ticker_str, term_label, scale=None):\n",
+    "    # compute means\n",
+    "    mean_sharpe = sharpe.mean()\n",
+    "    mean_sortino = sortino.mean()\n",
+    "\n",
+    "    # Plot Sharpe and Sortino ratios with mean lines\n",
+    "    fig = go.Figure()\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=sharpe.index, y=sharpe, mode='lines',\n",
+    "        name=f'Sharpe Ratio ({time_frame}-day)', line=dict(color='blue')\n",
+    "    ))\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=sortino.index, y=sortino, mode='lines',\n",
+    "        name=f'Sortino Ratio ({time_frame}-day)', line=dict(color='orange')\n",
+    "    ))\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=sharpe.index, y=pd.Series(mean_sharpe, index=sharpe.index),\n",
+    "        mode='lines', name=f'Mean Sharpe ({mean_sharpe:.3f})',\n",
+    "        line=dict(color='blue', dash='dash'), opacity=0.7\n",
+    "    ))\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=sortino.index, y=pd.Series(mean_sortino, index=sortino.index),\n",
+    "        mode='lines', name=f'Mean Sortino ({mean_sortino:.3f})',\n",
+    "        line=dict(color='orange', dash='dash'), opacity=0.7\n",
+    "    ))\n",
+    "    fig.update_layout(\n",
+    "        title=f'Sharpe and Sortino Ratios for {ticker_str} ({term_label})',\n",
+    "        xaxis_title='Date', yaxis_title='Ratio Value',\n",
+    "        template='plotly_white', legend=dict(x=0.01, y=0.99), height=500\n",
+    "    )\n",
+    "    fig.show()\n",
+    "\n",
+    "    # Compute spread\n",
+    "    spread = (sharpe - sortino).dropna()\n",
+    "\n",
+    "    if scale == 'z':\n",
+    "        # z-score scaling (uses running mean/std if preferred, replace with rolling if needed)\n",
+    "        spread_mean = spread.mean()\n",
+    "        spread_std = spread.std(ddof=0) if spread.std(ddof=0) != 0 else 1.0\n",
+    "        spread_z = (spread - spread_mean) / spread_std\n",
+    "        series_to_plot = spread_z\n",
+    "        y_title = 'Spread (z-score)'\n",
+    "    else:\n",
+    "        series_to_plot = spread\n",
+    "        y_title = 'Spread Value'\n",
+    "\n",
+    "    # Plot spread (or z-score) and add reference lines\n",
+    "    fig_spread = go.Figure()\n",
+    "    fig_spread.add_trace(go.Scatter(\n",
+    "        x=series_to_plot.index, y=series_to_plot, mode='lines',\n",
+    "        name=f'Sharpe-Sortino Spread ({time_frame}-day)', line=dict(color='green')\n",
+    "    ))\n",
+    "\n",
+    "    # zero / mean line\n",
+    "    fig_spread.add_shape(type=\"line\",\n",
+    "        x0=series_to_plot.index.min(), x1=series_to_plot.index.max(),\n",
+    "        y0=0, y1=0, line=dict(color=\"black\", width=1, dash=\"dash\"),\n",
+    "        xref=\"x\", yref=\"y\"\n",
+    "    )\n",
+    "\n",
+    "    # if scaled, draw ±1/±2 significance lines\n",
+    "    if scale == 'z':\n",
+    "        for lvl, color, dash in [(1, 'red', 'dot'), (2, 'purple', 'dot'), (-1, 'red', 'dot'), (-2, 'purple', 'dot')]:\n",
+    "            fig_spread.add_shape(type=\"line\",\n",
+    "                x0=series_to_plot.index.min(), x1=series_to_plot.index.max(),\n",
+    "                y0=lvl, y1=lvl, line=dict(color=color, width=1, dash=dash),\n",
+    "                xref=\"x\", yref=\"y\"\n",
+    "            )\n",
+    "        # annotate current z-score mean at right edge\n",
+    "        cur_mean = series_to_plot.mean()\n",
+    "        fig_spread.add_trace(go.Scatter(\n",
+    "            x=[series_to_plot.index[-1]], y=[cur_mean],\n",
+    "            mode='markers+text', marker=dict(color='purple', size=6),\n",
+    "            text=[f'Mean z: {cur_mean:.2f}'], textposition='middle right', showlegend=False\n",
+    "        ))\n",
+    "\n",
+    "    fig_spread.update_layout(\n",
+    "        title=f'Sharpe-Sortino Spread for {ticker_str} ({term_label})',\n",
+    "        xaxis_title='Date', yaxis_title=y_title,\n",
+    "        template='plotly_white', legend=dict(x=0.01, y=0.99), height=500\n",
+    "    )\n",
+    "    fig_spread.show()\n",
+    "\n",
+    "# Short Term\n",
+    "plot_sharpe_sortino_and_spread(\n",
+    "    sharpe_ticker_short, sortino_ticker_short, time_frame_short, ticker_str\n",
+    "    , term_label='Short Term', scale='z'\n",
+    "    \n",
+    ")\n",
+    "# Mid Term\n",
+    "plot_sharpe_sortino_and_spread(\n",
+    "    sharpe_ticker_mid, sortino_ticker_mid, time_frame_mid, ticker_str\n",
+    "    , term_label='Mid Term', scale='z'\n",
+    "    \n",
+    ")\n",
+    "# Long Term\n",
+    "plot_sharpe_sortino_and_spread(\n",
+    "    sharpe_ticker_long, sortino_ticker_long, time_frame_long, ticker_str\n",
+    "    , term_label='Long Term', scale='z'\n",
+    ")\n",
+    "\n",
+    "# ...existing code..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Benchmark Comparisons: Risk-Adjusted Returns and Return Plots\n",
     "\n",
     "# Combine all risk-adjusted return plots into a single loop for short, mid, and long term\n",
     "\n",
@@ -715,6 +841,11 @@
     "    ).show()\n",
     "# ...existing code..."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
